; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_surface.c_surface_load_renderbuffer.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_surface.c_surface_load_renderbuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_surface = type { %struct.wined3d_texture* }
%struct.wined3d_texture = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, i32 }
%struct.wined3d_context = type { i32 }
%struct.TYPE_7__ = type { i32, i32, i32, i32 }
%struct.TYPE_8__ = type { i32 }

@WINED3DUSAGE_DEPTHSTENCIL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"Unimplemented copy from %s for depth/stencil buffers.\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@WINED3D_LOCATION_RB_MULTISAMPLE = common dso_local global i32 0, align 4
@WINED3D_LOCATION_RB_RESOLVED = common dso_local global i32 0, align 4
@WINED3D_LOCATION_TEXTURE_SRGB = common dso_local global i32 0, align 4
@WINED3D_LOCATION_TEXTURE_RGB = common dso_local global i32 0, align 4
@WINED3D_TEXF_POINT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wined3d_surface*, %struct.wined3d_context*, i32)* @surface_load_renderbuffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @surface_load_renderbuffer(%struct.wined3d_surface* %0, %struct.wined3d_context* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wined3d_surface*, align 8
  %6 = alloca %struct.wined3d_context*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.wined3d_texture*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_7__, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.wined3d_surface* %0, %struct.wined3d_surface** %5, align 8
  store %struct.wined3d_context* %1, %struct.wined3d_context** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = load %struct.wined3d_surface*, %struct.wined3d_surface** %5, align 8
  %14 = getelementptr inbounds %struct.wined3d_surface, %struct.wined3d_surface* %13, i32 0, i32 0
  %15 = load %struct.wined3d_texture*, %struct.wined3d_texture** %14, align 8
  store %struct.wined3d_texture* %15, %struct.wined3d_texture** %8, align 8
  %16 = load %struct.wined3d_surface*, %struct.wined3d_surface** %5, align 8
  %17 = call i32 @surface_get_sub_resource_idx(%struct.wined3d_surface* %16)
  %18 = load %struct.wined3d_texture*, %struct.wined3d_texture** %8, align 8
  %19 = getelementptr inbounds %struct.wined3d_texture, %struct.wined3d_texture* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = urem i32 %17, %20
  store i32 %21, i32* %9, align 4
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  store i32 0, i32* %22, align 4
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 1
  store i32 0, i32* %23, align 4
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 2
  %25 = load %struct.wined3d_texture*, %struct.wined3d_texture** %8, align 8
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @wined3d_texture_get_level_width(%struct.wined3d_texture* %25, i32 %26)
  store i32 %27, i32* %24, align 4
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 3
  %29 = load %struct.wined3d_texture*, %struct.wined3d_texture** %8, align 8
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @wined3d_texture_get_level_height(%struct.wined3d_texture* %29, i32 %30)
  store i32 %31, i32* %28, align 4
  %32 = load %struct.wined3d_surface*, %struct.wined3d_surface** %5, align 8
  %33 = call %struct.TYPE_8__* @surface_get_sub_resource(%struct.wined3d_surface* %32)
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  store i32 %35, i32* %11, align 4
  %36 = load %struct.wined3d_texture*, %struct.wined3d_texture** %8, align 8
  %37 = getelementptr inbounds %struct.wined3d_texture, %struct.wined3d_texture* %36, i32 0, i32 1
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* @WINED3DUSAGE_DEPTHSTENCIL, align 4
  %41 = and i32 %39, %40
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %48

43:                                               ; preds = %3
  %44 = load i32, i32* %11, align 4
  %45 = call i32 @wined3d_debug_location(i32 %44)
  %46 = call i32 @FIXME(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %45)
  %47 = load i32, i32* @FALSE, align 4
  store i32 %47, i32* %4, align 4
  br label %86

48:                                               ; preds = %3
  %49 = load i32, i32* %11, align 4
  %50 = load i32, i32* @WINED3D_LOCATION_RB_MULTISAMPLE, align 4
  %51 = and i32 %49, %50
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %48
  %54 = load i32, i32* @WINED3D_LOCATION_RB_MULTISAMPLE, align 4
  store i32 %54, i32* %12, align 4
  br label %73

55:                                               ; preds = %48
  %56 = load i32, i32* %11, align 4
  %57 = load i32, i32* @WINED3D_LOCATION_RB_RESOLVED, align 4
  %58 = and i32 %56, %57
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %62

60:                                               ; preds = %55
  %61 = load i32, i32* @WINED3D_LOCATION_RB_RESOLVED, align 4
  store i32 %61, i32* %12, align 4
  br label %72

62:                                               ; preds = %55
  %63 = load i32, i32* %11, align 4
  %64 = load i32, i32* @WINED3D_LOCATION_TEXTURE_SRGB, align 4
  %65 = and i32 %63, %64
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %69

67:                                               ; preds = %62
  %68 = load i32, i32* @WINED3D_LOCATION_TEXTURE_SRGB, align 4
  store i32 %68, i32* %12, align 4
  br label %71

69:                                               ; preds = %62
  %70 = load i32, i32* @WINED3D_LOCATION_TEXTURE_RGB, align 4
  store i32 %70, i32* %12, align 4
  br label %71

71:                                               ; preds = %69, %67
  br label %72

72:                                               ; preds = %71, %60
  br label %73

73:                                               ; preds = %72, %53
  %74 = load %struct.wined3d_texture*, %struct.wined3d_texture** %8, align 8
  %75 = getelementptr inbounds %struct.wined3d_texture, %struct.wined3d_texture* %74, i32 0, i32 1
  %76 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %75, i32 0, i32 1
  %77 = load i32, i32* %76, align 4
  %78 = load %struct.wined3d_context*, %struct.wined3d_context** %6, align 8
  %79 = load i32, i32* @WINED3D_TEXF_POINT, align 4
  %80 = load %struct.wined3d_surface*, %struct.wined3d_surface** %5, align 8
  %81 = load i32, i32* %12, align 4
  %82 = load %struct.wined3d_surface*, %struct.wined3d_surface** %5, align 8
  %83 = load i32, i32* %7, align 4
  %84 = call i32 @surface_blt_fbo(i32 %77, %struct.wined3d_context* %78, i32 %79, %struct.wined3d_surface* %80, i32 %81, %struct.TYPE_7__* %10, %struct.wined3d_surface* %82, i32 %83, %struct.TYPE_7__* %10)
  %85 = load i32, i32* @TRUE, align 4
  store i32 %85, i32* %4, align 4
  br label %86

86:                                               ; preds = %73, %43
  %87 = load i32, i32* %4, align 4
  ret i32 %87
}

declare dso_local i32 @surface_get_sub_resource_idx(%struct.wined3d_surface*) #1

declare dso_local i32 @wined3d_texture_get_level_width(%struct.wined3d_texture*, i32) #1

declare dso_local i32 @wined3d_texture_get_level_height(%struct.wined3d_texture*, i32) #1

declare dso_local %struct.TYPE_8__* @surface_get_sub_resource(%struct.wined3d_surface*) #1

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @wined3d_debug_location(i32) #1

declare dso_local i32 @surface_blt_fbo(i32, %struct.wined3d_context*, i32, %struct.wined3d_surface*, i32, %struct.TYPE_7__*, %struct.wined3d_surface*, i32, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
